# chromium-profile-syncer

./: .gitignore  CLAUDE.md  DESIGN.md  Makefile  README.md  build.py  cli.py  pyproject.toml
.github/workflows/: release.yml
assets/: icon.icns
docs/: DESIGN.md  helium.md  search-shortcuts.md
scripts/: e2e.py  e2e2.py  install_release.py
src/: _winproc.py  autostart.py  browser_monitor.py  config.py  dracula.py  help_dialog.py  log_viewer.py  main.py  notify.py  rclone.py  settings.py  shortcuts_editor.py  single_instance.py  sync_engine.py  sync_progress.py  sync_worker.py  theme.py  tray.py  update_runner.py  updater.py  version.py  watcher_controller.py  winget.py
src/browsers/: __init__.py  base.py  chrome.py  helium.py  thorium.py  yandex.py
src/settings/: __init__.py  _activity_log.py  _desktop_backup.py  _desktop_backup_buttons.py  _helpers.py  _profile_row.py  dialog.py  extensions_manager.py  flags_manager.py  initial_upload.py
src/sync/: __init__.py  archive.py  extensions.py  favicons.py  flags.py  history.py  ldb_filter.py  leveldb.py  prefs.py  shortcuts.py  sync_dir.py
tests/: test_autostart.py  test_browsers.py  test_config.py  test_flags.py  test_log_viewer.py  test_main.py  test_settings.py  test_single_instance.py  test_sync_engine.py  test_tray.py  test_watcher_controller.py
