[project]
name = "chromium-profile-syncer"
version = "0.1.0"
description = "Cross-platform PySide6 system tray app to sync Chromium browser profiles"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7",
    "cryptography>=46.0.7",
    "psutil>=5.9",
]

[project.scripts]
chromium-profile-syncer = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
    "pytest>=8.0",
]
